Added query selector to constructor Put datepicker in the center

--- a/style.less
+++ b/style.less
@@ -30,9 +30,15 @@ a {
   width: 350px;
   height: 284px;
   border: 1px solid black;
-  margin: 0;
+
   .no-transform();
   .user-select(none);
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -142px;
+  margin-left: -175px;
 
   .week {
     width: 100%;
