Added multi input support Fixed some styles

--- a/style.less
+++ b/style.less
@@ -45,6 +45,7 @@ html {
   left: 50%;
   margin-top: -142px;
   margin-left: -175px;
+  background-color: white;
 
   .week {
     width: 100%;
@@ -137,3 +138,9 @@ html {
   }
 }
 
+.my-input {
+  height: 30px;
+  line-height: 30px;
+  font-size: 16px;
+  border-radius: 2px;
+}
