--- a/style.less
+++ b/style.less
@@ -33,9 +33,10 @@ html {
 }
 
 .date-picker {
-  width: 350px;
+  width: 352px;
   height: 284px;
   border: 1px solid black;
+  z-index: 11;
 
   .no-transform();
   .user-select(none);
@@ -44,7 +45,7 @@ html {
   top: 50%;
   left: 50%;
   margin-top: -142px;
-  margin-left: -175px;
+  margin-left: -176px;
   background-color: white;
 
   .week {
