Added overlay Added options as second parameter to DatePicker constructor Added backdrop option

--- a/style.less
+++ b/style.less
@@ -32,6 +32,15 @@ html {
   transform : translateZ(0);
 }
 
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgba(173, 173, 173, 0.3);
+}
+
 .date-picker {
   width: 352px;
   height: 284px;
