Removed fixed height of container

--- a/style.less
+++ b/style.less
@@ -8,6 +8,11 @@ a {
   cursor: pointer;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 @selected-day: #4CAFED;
 @active-element-color : #3022ed;
 
@@ -39,7 +44,6 @@ a {
 
 .date-picker {
   width: 352px;
-  height: 284px;
   border: 1px solid black;
   z-index: 11;
 
